@@ -46,7 +46,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand Mai 2012}
+{\large Stand Dezember 2012}
 \end{raggedright}
 
 \clearpage
@@ -2210,7 +2210,7 @@ einmal sein.  Was sollte man als Erkenntnis aus diesem Abschnitt mitnehmen?
 \section{Registersymbole}
 \label{SectRegSyms} \ttindex{Registersymbole}
 
-{\em G"ultigkeit: PowerPC, M-Core, 4004/4040, 80C16x, AVR, XS1}
+{\em G"ultigkeit: PowerPC, M-Core, 4004/4040, 80C16x, AVR, XS1, Z8}
 
 Manchmal ist es erw"unscht, nicht nur einer Speicheradresse oder einer
 Konstanten, sondern auch einem Register einen symbolischen Namen zuzuweisen,
