@@ -230,7 +230,7 @@ DS         \> DT          \> DW          \> EXTMODE     \> LWORDMODE \\
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
 DB         \> DD          \> DQ          \> DS          \> DT \\
-DW         \> SFR \\
+DW         \> REG         \> SFR \\
 \end{tabbing}}
 
 \subsubsection{Xilinx KCPSM}
