@@ -65,7 +65,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition Mai 2012}
+{\large Edition December 2012}
 \end{raggedright}
 
 \clearpage
@@ -1646,7 +1646,7 @@ Valid digits are numbers from 0 to 9 and letters from A to Z (value 10 to
 integer constants however brings along some ambiguities since symbol names
 also are sequences of numbers and letters: a symbol name must not start
 with a character from 0 to 9.  This means that an integer constant which
-is not clearly marked a such with a special prefix character never mav
+is not clearly marked a such with a special prefix character never may
 begin with a letter.  One has to add an additional, otherwise superfluous
 zero in front in such cases.  The most prominent case is the writing of
 hexadecimal constants in Intel mode:  If the leftmost digit is between A
@@ -2145,7 +2145,7 @@ necessary.  Which is the essence you should learn from this section?
 \section{Register Symbols}
 \label{SectRegSyms} \ttindex{register symbols}
 
-{\em valid for: PowerPC, M-Core, 4004/4040, 80C16x, AVR, XS1}
+{\em valid for: PowerPC, M-Core, 4004/4040, 80C16x, AVR, XS1, Z8}
 
 Sometimes it is desirable not only to assign symbolic names to memory
 addresses or constants, but also to a register, to emphasize its function
